<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuildAWord</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel_btn_text">x</string>
    <string name="send_btn_text"><![CDATA[>]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="classic_loc">Классика</string>
    <string name="arcade_loc">Аркада</string>
    <string name="hard_loc">Строгий</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_game_screen_status_text">Status</string>
    <string name="post_game_screen_winner_text">Winner</string>
    <string name="post_game_screen_comment_text">Comments</string>
    <string name="avatar_description">avatar image</string>
    <string name="service_started">service_started</string>

</resources>
